added content to antecedentes, no done

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,17 @@
 \documentclass{report}
+\usepackage{apacite}
+\usepackage{parskip}
 \usepackage[utf8]{inputenc}
+\usepackage{graphicx}
+\usepackage[acronym,automake]{glossaries-extra}
+\setabbreviationstyle[acronym]{long-short}
+\newacronym{startup}{startup frames}{Cantidad de frames para comenzar una movida}
+\newacronym{active}{active frames}{Cantidad de frames en la cual es posible colisionar con el opnente}
+\newacronym{recovery}{recovery frames}{Cantidad de frames en la cual es imposible admitir otra movida}
+\newacronym{frame_data}{frame data}{Los valores de startup frames, active frames, recovery frames y blockstun para una movida}
+\newacronym{on_block}{on block}{Cantidad de frames de ventaja o desventaja luego de restar recovery frames y blockstun}
+\newacronym{blockstun}{blockstun}{Cantidad de frames en que el atacado no puede hacer nada aparte de bloquear}
+\makeglossaries
 
 \title{COMP4998 Reporte}
 \author{Aramis Matos, Lenier Gerena, Jorge Huertas}
@@ -20,6 +32,10 @@
 \addcontentsline{toc}{chapter}{Fundamentos Teóricos}
 
 \input{chapters/fund.tex}
+
+\printglossary[type=\acronymtype]
+
+\bibliography{References}
 
 \bibliographystyle{apacite}
 
