--- a/References.bib
+++ b/References.bib
@@ -24,6 +24,18 @@
   file = {/home/ccyanide/Zotero/storage/L4I6PJYU/Using_Frame_Data.html}
 }
 
+@article{noauthor_granblue_2022,
+  title = {{\emph{Granblue }}{{{\emph{Fantasy Versus}}}}},
+  year = {2022},
+  month = aug,
+  journal = {Wikipedia},
+  abstract = {Granblue Fantasy Versus is a 2.5D fighting game developed by Arc System Works for the PlayStation 4. It is based on the role-playing video game Granblue Fantasy, and it was released in Japan and Asia by Cygames, and TSS Ventures (Tencent, Square Enix, and Sega) respectively on February 6, 2020, and North America by Marvelous' Xseed Games on March 3, 2020. Microsoft Windows release was officially announced for March 13, 2020, to commemorate the 6th anniversary of the series.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1105731908},
+  file = {/home/ccyanide/Zotero/storage/2QC6WRV4/Granblue_Fantasy_Versus.html}
+}
+
 @misc{noauthor_grasshopper_nodate,
   title = {Grasshopper ({{Character Balancing}} / {{Frame Data Tool}})},
   author = {, RobotMonkeyHead},
