--- a/References.bib
+++ b/References.bib
@@ -136,3 +136,12 @@
 }
 
 
+@misc{noauthor_what_nodate,
+  title = {What Is Frame Data in Fighting Games, and Why Is It so Complicated? - {{Quora}}},
+  howpublished = {https://www.quora.com/What-is-frame-data-in-fighting-games-and-why-is-it-so-complicated},
+  file = {/home/smokey/Zotero/storage/7C35YDAL/What-is-frame-data-in-fighting-games-and-why-is-it-so-complicated.html}
+}
+
+
+
+
