--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,10 @@
 \documentclass{report}
+\usepackage[acronym,automake]{glossaries-extra}
+\usepackage{hyperref}
+\usepackage{unicode}
 \usepackage{apacite}
 \usepackage{parskip}
-\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
-\usepackage[acronym,automake]{glossaries-extra}
 \setabbreviationstyle[acronym]{long-short}
 \newacronym{startup}{startup frames}{Cantidad de frames para comenzar una movida}
 \newacronym{active}{active frames}{Cantidad de frames en la cual es posible colisionar con el opnente}
