fixed zotero sync

--- a/References.bib
+++ b/References.bib
@@ -1,136 +1,148 @@
 
-@misc{aramis_matos_aramis-matosskybounddb_2021,
+@misc{aramis_matos_aramis-matosskybounddb_2021-1,
   title = {Aramis-Matos/{{SkyboundDB}}},
   author = {{Aramis Matos}},
   year = {2021},
-  month = may
+  month = may,
+  howpublished = {https://github.com/aramis-matos/SkyboundDB},
+  file = {/home/smokey/Zotero/storage/EIZEQ2JN/SkyboundDB.html}
 }
 
-@misc{asale_diccionario_nodate,
-  title = {{Diccionario de la lengua espa\~nola | Edici\'on del Tricentenario}},
-  author = {ASALE, RAE- and RAE},
-  journal = {\guillemotleft Diccionario de la lengua espa\~nola\guillemotright{} - Edici\'on del Tricentenario},
-  abstract = {Versi\'on electr\'onica 23.5 del \guillemotleft Diccionario de la lengua espa\~nola\guillemotright, obra lexicogr\'afica acad\'emica por excelencia.},
-  howpublished = {https://dle.rae.es/},
-  langid = {spanish},
-  file = {/home/smokey/Zotero/storage/K37LLZBL/dle.rae.es.html}
-}
-
-@misc{d4rkonion_fat_2022,
+@misc{d4rkonion_fat_2022-1,
   title = {{{FAT}} 3},
-  author = {{D4RKONION}},
+  author = {D4RKONION},
   year = {2022},
   month = aug,
   abstract = {FAT - SF Frame Data App},
   copyright = {GPL-3.0}
 }
 
-@misc{dustloop_using_nodate,
-  title = {Using {{Frame Data}} - {{Dustloop Wiki}}},
-  author = {{Dustloop}}
-}
-
-@misc{noauthor_9_nodate,
-  title = {(9) {{YouTube}}},
-  abstract = {Enjoy the videos and music you love, upload original content, and share it all with friends, family, and the world on YouTube.},
-  howpublished = {https://www.youtube.com/},
+@misc{dustloop_using_2022,
+  title = {Using {{Frame Data}}},
+  author = {{Dustloop}},
+  year = {2022},
+  month = aug,
+  journal = {Dustloop Wiki},
+  howpublished = {https://www.dustloop.com/w/Using\_Frame\_Data},
   langid = {english},
-  file = {/home/smokey/Zotero/storage/B8FRATQA/www.youtube.com.html}
+  file = {/home/smokey/Zotero/storage/IBVPRMSH/Using_Frame_Data.html}
 }
 
-@article{noauthor_granblue_2022,
-  title = {{\emph{Granblue Fantasy }}{{{\emph{Versus}}}}},
+@article{noauthor_granblue_2022-1,
+  title = {{\emph{Granblue }}{{{\emph{Fantasy Versus}}}}},
   year = {2022},
   month = aug,
   journal = {Wikipedia},
   abstract = {Granblue Fantasy Versus is a 2.5D fighting game developed by Arc System Works for the PlayStation 4. It is based on the role-playing video game Granblue Fantasy, and it was released in Japan and Asia by Cygames, and TSS Ventures (Tencent, Square Enix, and Sega) respectively on February 6, 2020, and North America by Marvelous' Xseed Games on March 3, 2020. Microsoft Windows release was officially announced for March 13, 2020, to commemorate the 6th anniversary of the series.},
   copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english}
+  langid = {english},
+  annotation = {Page Version ID: 1105731908},
+  file = {/home/smokey/Zotero/storage/2QC6WRV4/Granblue_Fantasy_Versus.html}
 }
 
-@misc{noauthor_grasshopper_nodate,
+@misc{noauthor_grasshopper_nodate-1,
   title = {Grasshopper ({{Character Balancing}} / {{Frame Data Tool}})},
   author = {, RobotMonkeyHead},
+  journal = {Mugen Free For All},
   abstract = {Hello MFFA peoples! This is a character balancing / frame data tool I made a couple years back called Grasshopper. I finally just finished polishing it off. It allows you to gather multiple characters' frame data and damage values on a chart. You can easily copy / paste / move them around for ave...},
-  langid = {american}
+  howpublished = {https://mugenfreeforall.com/topic/27012-grasshopper-character-balancing-frame-data-tool/},
+  langid = {american},
+  file = {/home/smokey/Zotero/storage/HP9A3SZ4/27012-grasshopper-character-balancing-frame-data-tool.html}
 }
 
-@misc{noauthor_guide_nodate,
-  title = {A {{Guide}} to {{Frame Data}} - {{Dream Cancel}}}
+@misc{noauthor_guide_nodate-1,
+  title = {A {{Guide}} to {{Frame Data}} - {{Dream Cancel}}},
+  howpublished = {https://dreamcancel.com/2011/10/a-guide-to-frame-data/},
+  file = {/home/smokey/Zotero/storage/N8QSFY5X/a-guide-to-frame-data.html}
 }
 
-@article{noauthor_guilty_2022,
-  title = {{\emph{Guilty Gear }}{{{\emph{Strive}}}}},
+@article{noauthor_guilty_2022-1,
+  title = {{\emph{Guilty }}{{{\emph{Gear Strive}}}}},
   year = {2022},
   month = aug,
   journal = {Wikipedia},
   abstract = {Guilty Gear Strive is a fighting video game developed and published by Arc System Works. It is the seventh mainline installment of the Guilty Gear series, and the 25th overall. The game was released worldwide on June 11, 2021 to generally positive reviews.},
   copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english}
+  langid = {english},
+  annotation = {Page Version ID: 1106552864},
+  file = {/home/smokey/Zotero/storage/3KK3D2HH/Guilty_Gear_Strive.html}
 }
 
-@misc{noauthor_myanimelistnet_nodate,
-  title = {{{MyAnimeList}}.Net - {{Anime}} and {{Manga Database}} and {{Community}}},
-  journal = {MyAnimeList.net},
-  abstract = {Welcome to MyAnimeList, the world's most active online anime and manga community and database. Join the online community, create your anime and manga list, read reviews, explore the forums, follow news, and so much more!},
-  howpublished = {https://myanimelist.net/},
-  langid = {english}
+@misc{noauthor_rubendalssbu-calculator_nodate-1,
+  title = {Rubendal/{{SSBU-Calculator}}: {{Smash Ultimate}} Knockback Calculator},
+  howpublished = {https://github.com/rubendal/SSBU-Calculator},
+  file = {/home/smokey/Zotero/storage/UNS2L4AJ/SSBU-Calculator.html}
 }
 
-@misc{noauthor_rubendalssbu-calculator_nodate,
-  title = {Rubendal/{{SSBU-Calculator}}: {{Smash Ultimate}} Knockback Calculator}
+@misc{noauthor_smash_nodate,
+  title = {Smash {{Ultimate Calculator}}},
+  howpublished = {https://rubendal.github.io/SSBU-Calculator/},
+  file = {/home/smokey/Zotero/storage/M78NKGE9/SSBU-Calculator.html}
 }
 
-@article{noauthor_street_2022,
-  title = {{\emph{Street Fighter }}{{{\emph{III}}}}{\emph{: 3rd }}{{{\emph{Strike}}}}},
-  shorttitle = {{\emph{Street Fighter }}{{{\emph{III}}}}},
-  year = {2022},
-  month = aug,
-  journal = {Wikipedia},
-  abstract = {Street Fighter III 3rd Strike: Fight for the Future (ストリートファイターIII サードストライク ファイト・フォー・ザ・フューチャー) is a 2D fighting game developed and published by Capcom, originally released for the arcades in 1999. It was ported to the Dreamcast, PlayStation 2, and Xbox between 2000 and 2010. A downloadable online version titled Street Fighter III: 3rd Strike Online Edition was released on PlayStation Network and Xbox Live Arcade in 2011. Street Fighter III 3rd Strike is the second follow-up to Street Fighter III, following Street Fighter III: 2nd Impact. Like its predecessors, it runs on the CP System III hardware. 3rd Strike increased the character roster by adding five new characters, notably including Chun-Li. It also added further refinements to the previous game's play mechanics and rules. The game was well received in all of its versions and has since been regarded as one of the greatest fighting games of all time. On 29 May 2018, Street Fighter III: 3rd Strike - Fight for the Future was released as a part of the Street Fighter 30th Anniversary Collection for the PlayStation 4, Xbox One, Steam and Nintendo Switch.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english}
-}
-
-@article{noauthor_street_2022-1,
-  title = {{\emph{Street Fighter }}{{{\emph{IV}}}}},
-  year = {2022},
-  month = jul,
-  journal = {Wikipedia},
-  abstract = {Street Fighter IV (ストリートファイター IV, Sutor\=ito Fait\=a F\=o) is a 2008 fighting game published by Capcom, who also co-developed the game with Dimps. It was the first original main entry in the series since Street Fighter III in 1997, a hiatus of eleven years. The coin-operated arcade game version was released in Japan on July 18, 2008, with North American arcades importing the machines by August. The console versions for the PlayStation 3 and Xbox 360 were released in Japan on February 12, 2009, and were sold in North American stores as early as February 16, with a February 18 intended release date. The official European release was on February 20. A Microsoft Windows version was released on July 2, 2009, in Japan, July 3, 2009 in Europe and July 7, 2009, in the United States. A version for iOS was released on March 10, 2010. Also, an Android version was launched, initially as an exclusive for certain LG devices. Then by December 31, 2012, the exclusivity expired and the game was made available for all Android devices on the Play Store, with a region restriction that makes it available only in Japan. An updated version, Super Street Fighter IV, was released as a standalone title in April 2010.Street Fighter IV received universal critical acclaim; receiving universally high scores from many gaming websites and magazines and it has often been cited as one of the greatest games of all time. It was followed by Super Street Fighter IV and Arcade Edition in 2010, 3D Edition in 2011, and Ultra Street Fighter IV in 2014. All versions of Street Fighter IV have sold over 9 million units across all platforms.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english}
-}
-
-@article{noauthor_street_2022-2,
-  title = {{\emph{Street Fighter }}{{{\emph{V}}}}},
+@article{noauthor_street_2022-3,
+  title = {{\emph{Street }}{{{\emph{Fighter V}}}}},
   year = {2022},
   month = aug,
   journal = {Wikipedia},
   abstract = {Street Fighter V is a fighting game developed by Capcom and Dimps and published by Capcom for the PlayStation 4 and Microsoft Windows in 2016. Similar to the previous games in the Street Fighter series, Street Fighter V features a side-scrolling fighting gameplay system. The game also introduces the "V-Gauge", which builds as the player receives attacks and adds three new skills. The game features 16 characters at launch, with four of them being new to the series. A main story mode and 30 additional characters were added through updates and downloadable content. According to Capcom, the game is a PlayStation 4 console exclusive due to both Sony and Capcom having "the same vision for the growth potential in the fighting game space". The game is powered by Unreal Engine 4, and had a beta test prior to its launch. Upon release, the game received mixed reviews, with critics praising the game's graphics and gameplay, but criticizing its lack of content and characters, as well as its technical issues such as broken servers at launch and software bugs. Capcom was expecting the game to sell at least 2 million copies by the end of their fiscal year 2016, a target that was missed, selling only 1.4 million copies as of March 31, 2016. As of June 30, 2022, the game's accumulated sales reached 6.60 million, making it the best selling Street Fighter game on home consoles, surpassing Street Fighter II according to Capcom's Platinum Titles fiscal report.Its update, Street Fighter V: Arcade Edition, was released on January 16, 2018, and was received more positively, with improvements to the user interface and content, in particular its single-player modes and the addition of the much-requested Arcade Mode. A second update, titled Street Fighter V: Champion Edition, includes all fighters, stages, and most of the costumes released through its fourth season. It was released on February 14, 2020, receiving a physical release in the form of the original Street Fighter V disc, containing a voucher code to download the remaining content.},
   copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english}
+  langid = {english},
+  annotation = {Page Version ID: 1105720233},
+  file = {/home/smokey/Zotero/storage/7KSQ6TNP/Street_Fighter_V.html}
 }
 
-@article{noauthor_super_2022,
-  title = {{\emph{Super Smash }}{{{\emph{Bros}}}}{\emph{. }}{{{\emph{Ultimate}}}}},
+@article{noauthor_street_2022-4,
+  title = {{\emph{Street }}{{{\emph{Fighter IV}}}}},
+  year = {2022},
+  month = jul,
+  journal = {Wikipedia},
+  abstract = {Street Fighter IV (ストリートファイター IV, Sutor\=ito Fait\=a F\=o) is a 2008 fighting game published by Capcom, who also co-developed the game with Dimps. It was the first original main entry in the series since Street Fighter III in 1997, a hiatus of eleven years. The coin-operated arcade game version was released in Japan on July 18, 2008, with North American arcades importing the machines by August. The console versions for the PlayStation 3 and Xbox 360 were released in Japan on February 12, 2009, and were sold in North American stores as early as February 16, with a February 18 intended release date.  The official European release was on February 20. A Microsoft Windows version was released on July 2, 2009, in Japan, July 3, 2009 in Europe and July 7, 2009, in the United States. A version for iOS was released on March 10, 2010. Also, an Android version was launched, initially as an exclusive for certain LG devices. Then by December 31, 2012, the exclusivity expired and the game was made available for all Android devices on the Play Store, with a region restriction that makes it available only in Japan. An updated version, Super Street Fighter IV, was released as a standalone title in April 2010.Street Fighter IV received universal critical acclaim; receiving universally high scores from many gaming websites and magazines and it has often been cited as one of the greatest games of all time. It was followed by Super Street Fighter IV and Arcade Edition in 2010, 3D Edition in 2011, and Ultra Street Fighter IV in 2014. All versions of Street Fighter IV have sold over 9 million units across all platforms.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1100411514},
+  file = {/home/smokey/Zotero/storage/VUE87AIT/Street_Fighter_IV.html}
+}
+
+@article{noauthor_street_2022-5,
+  title = {{\emph{Street }}{{{\emph{Fighter III}}}}{\emph{: 3rd }}{{{\emph{Strike}}}}},
+  shorttitle = {{\emph{Street }}{{{\emph{Fighter III}}}}},
+  year = {2022},
+  month = aug,
+  journal = {Wikipedia},
+  abstract = {Street Fighter III 3rd Strike: Fight for the Future (ストリートファイターIII サードストライク ファイト・フォー・ザ・フューチャー) is a 2D fighting game developed and published by Capcom, originally released for the arcades in 1999. It was ported to the Dreamcast, PlayStation 2, and Xbox between 2000 and 2010. A downloadable online version titled Street Fighter III: 3rd Strike Online Edition was released on PlayStation Network and Xbox Live Arcade in 2011. Street Fighter III 3rd Strike is the second follow-up to Street Fighter III, following Street Fighter III: 2nd Impact. Like its predecessors, it runs on the CP System III hardware. 3rd Strike increased the character roster by adding five new characters, notably including Chun-Li. It also added further refinements to the previous game's play mechanics and rules. The game was well received in all of its versions and has since been regarded as one of the greatest fighting games of all time. On 29 May 2018, Street Fighter III: 3rd Strike - Fight for the Future was released as a part of the Street Fighter 30th Anniversary Collection for the PlayStation 4, Xbox One, Steam and Nintendo Switch.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1106686885},
+  file = {/home/smokey/Zotero/storage/TGX8V4QP/Street_Fighter_III_3rd_Strike.html}
+}
+
+@article{noauthor_super_2022-1,
+  title = {{\emph{Super }}{{{\emph{Smash Bros}}}}{\emph{. }}{{{\emph{Ultimate}}}}},
   year = {2022},
   month = aug,
   journal = {Wikipedia},
   abstract = {Super Smash Bros. Ultimate is a 2018 crossover fighting game developed by Bandai Namco Studios and Sora Ltd. and published by Nintendo for the Nintendo Switch. It is the fifth installment in the Super Smash Bros. series, succeeding Super Smash Bros. for Nintendo 3DS and Wii U. The game follows the series' traditional style of gameplay: controlling one of the various characters, players must use differing attacks to weaken their opponents and knock them out of an arena. It features a wide variety of game modes, including a campaign for single-player and multiplayer versus modes. Ultimate features 89 playable fighters, including all characters from previous Super Smash Bros. games alongside newcomers. The roster ranges from Nintendo mascots to characters from third-party franchises. Planning for the game had begun by December 2015, with full development starting after the completion of 3DS/Wii U's downloadable content (DLC). Series creator and director Masahiro Sakurai returned along with Bandai Namco Studios and Sora, the studios that developed 3DS/Wii U, with the return of the studios speeding up the preparation process. Sakurai's goal with Ultimate was to include every character from previous games in the series despite the various development and licensing challenges this would present. Several well-known video game musicians contributed to the soundtrack, with Hideki Sakamoto writing the main theme "Lifelight". Nintendo first teased Ultimate in a Nintendo Direct in March 2018 and fully revealed it at E3 2018 the following June. It later received two additional Directs before it was released on December 7, 2018. The game received universal acclaim, with some critics calling it the best of the series. They praised its amount of content and fine-tuning of existing Smash gameplay elements, although its online mode received criticism. Ultimate is the best-selling fighting game of all time, having sold over 28 million copies by March 2022, and is a popular competitive fighting game. The game was supported with downloadable content adding new fighters, stages, and other content from its release until October 2021.},
   copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english}
+  langid = {english},
+  annotation = {Page Version ID: 1105698236},
+  file = {/home/smokey/Zotero/storage/YYEE9AT7/Super_Smash_Bros.html}
 }
 
-@misc{noauthor_super_nodate,
-  title = {Super {{Smash Bros}}. {{Melee}} - {{Wikipedia}}}
+@misc{noauthor_super_nodate-1,
+  title = {Super {{Smash Bros}}. {{Melee}} - {{Wikipedia}}},
+  howpublished = {https://en.wikipedia.org/wiki/Super\_Smash\_Bros.\_Melee},
+  file = {/home/smokey/Zotero/storage/6J9PUKI5/Super_Smash_Bros.html}
 }
 
-@misc{willingham_what_2018,
+@misc{willingham_what_2018-1,
   title = {What Is {{eSports}}? {{A}} Look at an Explosive, Billion-Dollar Industry | {{CNN}}},
   author = {Willingham, AJ},
   year = {2018},
-  month = aug
+  month = aug,
+  journal = {What is eSports? A look at an explosive billion-dollar industry},
+  howpublished = {https://edition.cnn.com/2018/08/27/us/esports-what-is-video-game-professional-league-madden-trnd/index.html},
+  file = {/home/smokey/Zotero/storage/EGD88DAL/index.html}
 }
 
 
