changed bibliography to My Library.bib

--- a/main.tex
+++ b/main.tex
@@ -36,8 +36,7 @@
 
 \printglossary[type=\acronymtype]
 
-\bibliography{References}
-
+\bibliographystyle{My Library}
 \bibliographystyle{apacite}
 
 \end{document}
