Changed back to References.bib

--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,8 @@
 
 \printglossary[type=\acronymtype]
 
-\bibliographystyle{My Library}
+\bibliography{References}
+
 \bibliographystyle{apacite}
 
 \end{document}
