fixed it, dunno what happened. Probably due to bibtex != biblatex

--- a/References.bib
+++ b/References.bib
@@ -1,14 +1,14 @@
 
-@misc{aramis_matos_aramis-matosskybounddb_2021,
+@misc{aramis_matos_aramis-matosskybounddb_2021-1,
   title = {Aramis-Matos/{{SkyboundDB}}},
   author = {{Aramis Matos}},
   year = {2021},
   month = may,
   howpublished = {https://github.com/aramis-matos/SkyboundDB},
-  file = {/home/lenier/Zotero/storage/EIZEQ2JN/SkyboundDB.html}
+  file = {/home/ccyanide/Zotero/storage/EIZEQ2JN/SkyboundDB.html}
 }
 
-@misc{d4rkonion_fat_2022,
+@misc{d4rkonion_fat_2022-1,
   title = {{{FAT}} 3},
   author = {D4RKONION},
   year = {2022},
@@ -25,22 +25,22 @@
   journal = {Dustloop Wiki},
   howpublished = {https://www.dustloop.com/w/Using\_Frame\_Data},
   langid = {english},
-  file = {/home/lenier/Zotero/storage/IBVPRMSH/Using_Frame_Data.html}
+  file = {/home/ccyanide/Zotero/storage/IBVPRMSH/Using_Frame_Data.html}
 }
 
 @misc{noauthor_aur_nodate,
   title = {{{AUR}} (En) - Cabal-Static},
   howpublished = {https://aur.archlinux.org/packages/cabal-static},
-  file = {/home/lenier/Zotero/storage/CCZVUNN9/cabal-static.html}
+  file = {/home/ccyanide/Zotero/storage/CCZVUNN9/cabal-static.html}
 }
 
 @misc{noauthor_fighting_nodate,
   title = {The {{Fighting Game Glossary}} | Infil.Net},
   howpublished = {https://glossary.infil.net/?t=Health\%20Bar},
-  file = {/home/lenier/Zotero/storage/4BE5QS5Y/glossary.infil.net.html}
+  file = {/home/ccyanide/Zotero/storage/4BE5QS5Y/glossary.infil.net.html}
 }
 
-@article{noauthor_granblue_2022,
+@article{noauthor_granblue_2022-1,
   title = {{\emph{Granblue }}{{{\emph{Fantasy Versus}}}}},
   year = {2022},
   month = aug,
@@ -49,26 +49,26 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1105731908},
-  file = {/home/lenier/Zotero/storage/2QC6WRV4/Granblue_Fantasy_Versus.html}
+  file = {/home/ccyanide/Zotero/storage/2QC6WRV4/Granblue_Fantasy_Versus.html}
 }
 
-@misc{noauthor_grasshopper_nodate,
+@misc{noauthor_grasshopper_nodate-1,
   title = {Grasshopper ({{Character Balancing}} / {{Frame Data Tool}})},
   author = {, RobotMonkeyHead},
   journal = {Mugen Free For All},
   abstract = {Hello MFFA peoples! This is a character balancing / frame data tool I made a couple years back called Grasshopper. I finally just finished polishing it off. It allows you to gather multiple characters' frame data and damage values on a chart. You can easily copy / paste / move them around for ave...},
   howpublished = {https://mugenfreeforall.com/topic/27012-grasshopper-character-balancing-frame-data-tool/},
   langid = {american},
-  file = {/home/lenier/Zotero/storage/HP9A3SZ4/27012-grasshopper-character-balancing-frame-data-tool.html}
+  file = {/home/ccyanide/Zotero/storage/HP9A3SZ4/27012-grasshopper-character-balancing-frame-data-tool.html}
 }
 
-@misc{noauthor_guide_nodate,
+@misc{noauthor_guide_nodate-1,
   title = {A {{Guide}} to {{Frame Data}} - {{Dream Cancel}}},
   howpublished = {https://dreamcancel.com/2011/10/a-guide-to-frame-data/},
-  file = {/home/lenier/Zotero/storage/N8QSFY5X/a-guide-to-frame-data.html}
+  file = {/home/ccyanide/Zotero/storage/N8QSFY5X/a-guide-to-frame-data.html}
 }
 
-@article{noauthor_guilty_2022,
+@article{noauthor_guilty_2022-1,
   title = {{\emph{Guilty }}{{{\emph{Gear Strive}}}}},
   year = {2022},
   month = aug,
@@ -77,22 +77,46 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1106552864},
-  file = {/home/lenier/Zotero/storage/3KK3D2HH/Guilty_Gear_Strive.html}
+  file = {/home/ccyanide/Zotero/storage/3KK3D2HH/Guilty_Gear_Strive.html}
 }
 
-@misc{noauthor_rubendalssbu-calculator_nodate,
+@misc{noauthor_rubendalssbu-calculator_nodate-1,
   title = {Rubendal/{{SSBU-Calculator}}: {{Smash Ultimate}} Knockback Calculator},
   howpublished = {https://github.com/rubendal/SSBU-Calculator},
-  file = {/home/lenier/Zotero/storage/UNS2L4AJ/SSBU-Calculator.html}
+  file = {/home/ccyanide/Zotero/storage/UNS2L4AJ/SSBU-Calculator.html}
 }
 
 @misc{noauthor_smash_nodate,
   title = {Smash {{Ultimate Calculator}}},
   howpublished = {https://rubendal.github.io/SSBU-Calculator/},
-  file = {/home/lenier/Zotero/storage/M78NKGE9/SSBU-Calculator.html}
+  file = {/home/ccyanide/Zotero/storage/M78NKGE9/SSBU-Calculator.html}
 }
 
-@article{noauthor_street_2022,
+@article{noauthor_street_2022-3,
+  title = {{\emph{Street }}{{{\emph{Fighter V}}}}},
+  year = {2022},
+  month = aug,
+  journal = {Wikipedia},
+  abstract = {Street Fighter V is a fighting game developed by Capcom and Dimps and published by Capcom for the PlayStation 4 and Microsoft Windows in 2016. Similar to the previous games in the Street Fighter series, Street Fighter V features a side-scrolling fighting gameplay system. The game also introduces the "V-Gauge", which builds as the player receives attacks and adds three new skills. The game features 16 characters at launch, with four of them being new to the series. A main story mode and 30 additional characters were added through updates and downloadable content. According to Capcom, the game is a PlayStation 4 console exclusive due to both Sony and Capcom having "the same vision for the growth potential in the fighting game space". The game is powered by Unreal Engine 4, and had a beta test prior to its launch. Upon release, the game received mixed reviews, with critics praising the game's graphics and gameplay, but criticizing its lack of content and characters, as well as its technical issues such as broken servers at launch and software bugs. Capcom was expecting the game to sell at least 2 million copies by the end of their fiscal year 2016, a target that was missed, selling only 1.4 million copies as of March 31, 2016. As of June 30, 2022, the game's accumulated sales reached 6.60 million, making it the best selling Street Fighter game on home consoles, surpassing Street Fighter II according to Capcom's Platinum Titles fiscal report.Its update, Street Fighter V: Arcade Edition, was released on January 16, 2018, and was received more positively, with improvements to the user interface and content, in particular its single-player modes and the addition of the much-requested Arcade Mode. A second update, titled Street Fighter V: Champion Edition, includes all fighters, stages, and most of the costumes released through its fourth season. It was released on February 14, 2020, receiving a physical release in the form of the original Street Fighter V disc, containing a voucher code to download the remaining content.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1105720233},
+  file = {/home/ccyanide/Zotero/storage/7KSQ6TNP/Street_Fighter_V.html}
+}
+
+@article{noauthor_street_2022-4,
+  title = {{\emph{Street }}{{{\emph{Fighter IV}}}}},
+  year = {2022},
+  month = jul,
+  journal = {Wikipedia},
+  abstract = {Street Fighter IV (ストリートファイター IV, Sutor\=ito Fait\=a F\=o) is a 2008 fighting game published by Capcom, who also co-developed the game with Dimps. It was the first original main entry in the series since Street Fighter III in 1997, a hiatus of eleven years. The coin-operated arcade game version was released in Japan on July 18, 2008, with North American arcades importing the machines by August. The console versions for the PlayStation 3 and Xbox 360 were released in Japan on February 12, 2009, and were sold in North American stores as early as February 16, with a February 18 intended release date.  The official European release was on February 20. A Microsoft Windows version was released on July 2, 2009, in Japan, July 3, 2009 in Europe and July 7, 2009, in the United States. A version for iOS was released on March 10, 2010. Also, an Android version was launched, initially as an exclusive for certain LG devices. Then by December 31, 2012, the exclusivity expired and the game was made available for all Android devices on the Play Store, with a region restriction that makes it available only in Japan. An updated version, Super Street Fighter IV, was released as a standalone title in April 2010.Street Fighter IV received universal critical acclaim; receiving universally high scores from many gaming websites and magazines and it has often been cited as one of the greatest games of all time. It was followed by Super Street Fighter IV and Arcade Edition in 2010, 3D Edition in 2011, and Ultra Street Fighter IV in 2014. All versions of Street Fighter IV have sold over 9 million units across all platforms.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1100411514},
+  file = {/home/ccyanide/Zotero/storage/VUE87AIT/Street_Fighter_IV.html}
+}
+
+@article{noauthor_street_2022-5,
   title = {{\emph{Street }}{{{\emph{Fighter III}}}}{\emph{: 3rd }}{{{\emph{Strike}}}}},
   shorttitle = {{\emph{Street }}{{{\emph{Fighter III}}}}},
   year = {2022},
@@ -102,34 +126,10 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1106686885},
-  file = {/home/lenier/Zotero/storage/TGX8V4QP/Street_Fighter_III_3rd_Strike.html}
+  file = {/home/ccyanide/Zotero/storage/TGX8V4QP/Street_Fighter_III_3rd_Strike.html}
 }
 
-@article{noauthor_street_2022-1,
-  title = {{\emph{Street }}{{{\emph{Fighter IV}}}}},
-  year = {2022},
-  month = jul,
-  journal = {Wikipedia},
-  abstract = {Street Fighter IV (ストリートファイター IV, Sutor\=ito Fait\=a F\=o) is a 2008 fighting game published by Capcom, who also co-developed the game with Dimps. It was the first original main entry in the series since Street Fighter III in 1997, a hiatus of eleven years. The coin-operated arcade game version was released in Japan on July 18, 2008, with North American arcades importing the machines by August. The console versions for the PlayStation 3 and Xbox 360 were released in Japan on February 12, 2009, and were sold in North American stores as early as February 16, with a February 18 intended release date.  The official European release was on February 20. A Microsoft Windows version was released on July 2, 2009, in Japan, July 3, 2009 in Europe and July 7, 2009, in the United States. A version for iOS was released on March 10, 2010. Also, an Android version was launched, initially as an exclusive for certain LG devices. Then by December 31, 2012, the exclusivity expired and the game was made available for all Android devices on the Play Store, with a region restriction that makes it available only in Japan. An updated version, Super Street Fighter IV, was released as a standalone title in April 2010.Street Fighter IV received universal critical acclaim; receiving universally high scores from many gaming websites and magazines and it has often been cited as one of the greatest games of all time. It was followed by Super Street Fighter IV and Arcade Edition in 2010, 3D Edition in 2011, and Ultra Street Fighter IV in 2014. All versions of Street Fighter IV have sold over 9 million units across all platforms.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english},
-  annotation = {Page Version ID: 1100411514},
-  file = {/home/lenier/Zotero/storage/VUE87AIT/Street_Fighter_IV.html}
-}
-
-@article{noauthor_street_2022-2,
-  title = {{\emph{Street }}{{{\emph{Fighter V}}}}},
-  year = {2022},
-  month = aug,
-  journal = {Wikipedia},
-  abstract = {Street Fighter V is a fighting game developed by Capcom and Dimps and published by Capcom for the PlayStation 4 and Microsoft Windows in 2016. Similar to the previous games in the Street Fighter series, Street Fighter V features a side-scrolling fighting gameplay system. The game also introduces the "V-Gauge", which builds as the player receives attacks and adds three new skills. The game features 16 characters at launch, with four of them being new to the series. A main story mode and 30 additional characters were added through updates and downloadable content. According to Capcom, the game is a PlayStation 4 console exclusive due to both Sony and Capcom having "the same vision for the growth potential in the fighting game space". The game is powered by Unreal Engine 4, and had a beta test prior to its launch. Upon release, the game received mixed reviews, with critics praising the game's graphics and gameplay, but criticizing its lack of content and characters, as well as its technical issues such as broken servers at launch and software bugs. Capcom was expecting the game to sell at least 2 million copies by the end of their fiscal year 2016, a target that was missed, selling only 1.4 million copies as of March 31, 2016. As of June 30, 2022, the game's accumulated sales reached 6.60 million, making it the best selling Street Fighter game on home consoles, surpassing Street Fighter II according to Capcom's Platinum Titles fiscal report.Its update, Street Fighter V: Arcade Edition, was released on January 16, 2018, and was received more positively, with improvements to the user interface and content, in particular its single-player modes and the addition of the much-requested Arcade Mode. A second update, titled Street Fighter V: Champion Edition, includes all fighters, stages, and most of the costumes released through its fourth season. It was released on February 14, 2020, receiving a physical release in the form of the original Street Fighter V disc, containing a voucher code to download the remaining content.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english},
-  annotation = {Page Version ID: 1105720233},
-  file = {/home/lenier/Zotero/storage/7KSQ6TNP/Street_Fighter_V.html}
-}
-
-@article{noauthor_super_2022,
+@article{noauthor_super_2022-1,
   title = {{\emph{Super }}{{{\emph{Smash Bros}}}}{\emph{. }}{{{\emph{Ultimate}}}}},
   year = {2022},
   month = aug,
@@ -138,23 +138,23 @@
   copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1105698236},
-  file = {/home/lenier/Zotero/storage/YYEE9AT7/Super_Smash_Bros.html}
+  file = {/home/ccyanide/Zotero/storage/YYEE9AT7/Super_Smash_Bros.html}
 }
 
-@misc{noauthor_super_nodate,
+@misc{noauthor_super_nodate-1,
   title = {Super {{Smash Bros}}. {{Melee}} - {{Wikipedia}}},
   howpublished = {https://en.wikipedia.org/wiki/Super\_Smash\_Bros.\_Melee},
-  file = {/home/lenier/Zotero/storage/6J9PUKI5/Super_Smash_Bros.html}
+  file = {/home/ccyanide/Zotero/storage/6J9PUKI5/Super_Smash_Bros.html}
 }
 
-@misc{willingham_what_2018,
+@misc{willingham_what_2018-1,
   title = {What Is {{eSports}}? {{A}} Look at an Explosive, Billion-Dollar Industry | {{CNN}}},
   author = {Willingham, AJ},
   year = {2018},
   month = aug,
   journal = {What is eSports? A look at an explosive billion-dollar industry},
   howpublished = {https://edition.cnn.com/2018/08/27/us/esports-what-is-video-game-professional-league-madden-trnd/index.html},
-  file = {/home/lenier/Zotero/storage/EGD88DAL/index.html}
+  file = {/home/ccyanide/Zotero/storage/EGD88DAL/index.html}
 }
 
 
