--- a/main.tex
+++ b/main.tex
@@ -7,9 +7,9 @@
 \usepackage{graphicx}
 \setabbreviationstyle[acronym]{long-short}
 \newacronym{startup}{startup frames}{Cantidad de frames para comenzar una movida}
-\newacronym{active}{active frames}{Cantidad de frames en la cual es posible colisionar con el opnente}
+\newacronym{active}{active frames}{Cantidad de frames en la cual es posible colisionar con el oponente}
 \newacronym{recovery}{recovery frames}{Cantidad de frames en la cual es imposible admitir otra movida}
-\newacronym{frame_data}{frame data}{Los valores de startup frames, active frames, recovery frames y blockstun para una movida}
+\newacronym{frame_data}{frame data}{los valores de startup frames, active frames, recovery frames y blockstun para una movida}
 \newacronym{on_block}{on block}{Cantidad de frames de ventaja o desventaja luego de restar recovery frames y blockstun}
 \newacronym{blockstun}{blockstun}{Cantidad de frames en que el atacado no puede hacer nada aparte de bloquear}
 \makeglossaries
