removed dipshit's name

--- a/main.tex
+++ b/main.tex
@@ -14,8 +14,8 @@
 \newacronym{blockstun}{blockstun}{Cantidad de frames en que el atacado no puede hacer nada aparte de bloquear}
 \makeglossaries
 
-\title{COMP4998 Reporte}
-\author{Aramis Matos, Lenier Gerena, Jorge Huertas}
+\title{SkyboundDB 2.0}
+\author{Aramis Matos, Lenier Gerena}
 \date{Primer Semestre, 2022-2033}
 
 \begin{document}
